--- a/p2_deep_learning.ipynb
+++ b/p2_deep_learning.ipynb
@@ -58,7 +58,7 @@
         "# 3. Tracks train states through a state machine\n",
         "# 4. Outputs timestamped state changes\n",
         "#\n",
-        "# Team Members: Luke Videckis and Jose David Cortes\n",
+        "# Team Members: Luke Videckis and David Cortes\n",
         "\n",
         "\n",
         "# **** Libraries\n",
